# sensorhub-zephyr

.devcontainer/: devcontainer.json
sensorhub-zephyr/: CMakeLists.txt  README.md  prj.conf
sensorhub-zephyr/.github/workflows/: ci.yml
sensorhub-zephyr/app/: main.c  power.c  shell.c
sensorhub-zephyr/docker/: Dockerfile  build.sh  run.sh
sensorhub-zephyr/docs/: architecture.md  sequences.md
sensorhub-zephyr/drivers/: vs_imu.c  vs_temp.c
sensorhub-zephyr/include/: sensorhub.h
sensorhub-zephyr/scripts/: twister.sh
sensorhub-zephyr/subsys/mqtt_bridge/: mqtt_bridge.c
sensorhub-zephyr/tests/test_queue/: CMakeLists.txt  prj.conf
sensorhub-zephyr/tests/test_queue/src/: main.c
sensorhub-zephyr/tests/test_temp/: CMakeLists.txt  prj.conf
sensorhub-zephyr/tests/test_temp/src/: main.c
