cmake_minimum_required(VERSION 3.20.0)
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(test_queue)
target_sources(app PRIVATE src/main.c ../../app/main.c ../../drivers/vs_temp.c ../../drivers/vs_imu.c ../../app/shell.c ../../app/power.c)
target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../include)
